--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=backend
 server.port=8080
 
-# ??????? ??
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.data-source-properties.preferIPv4Stack=true
 spring.datasource.hikari.cachePrepStmts=false
+spring.datasource.hikari.prepStmtCacheSize=0
+spring.datasource.hikari.prepStmtCacheSqlLimit=0
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
