Fix: Use environment variables for all sensitive properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,57 @@
 spring.application.name=backend
+
+# =======================================
+# Server Configuration
+# =======================================
 server.port=8080
 
+# =======================================
+# Supabase (PostgreSQL) Database Configuration
+# =======================================
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# =======================================
+# HikariCP (Database Connection Pool)
+# =======================================
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.data-source-properties.preferIPv4Stack=true
 spring.datasource.hikari.cachePrepStmts=false
 spring.datasource.hikari.prepStmtCacheSize=0
 spring.datasource.hikari.prepStmtCacheSqlLimit=0
 
+# =======================================
+# JPA & Hibernate Configuration
+# =======================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# =======================================
+# JWT Configuration
+# =======================================
 app.jwtSecret=${APP_JWT_SECRET}
 app.jwtExpirationInMs=3600000
 
+# =======================================
+# Google Gemini AI Configuration
+# =======================================
 spring.ai.google.gemini.api-key=${SPRING_AI_GOOGLE_GEMINI_API_KEY}
 spring.ai.google.gemini.chat.model=gemini-2.5-flash
 gemini.api.key=${GEMINI_API_KEY}
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent
 
+# =======================================
+# Web Push (VAPID) Configuration
+# =======================================
 vapid.public.key=${VAPID_PUBLIC_KEY}
 vapid.private.key=${VAPID_PRIVATE_KEY}
 vapid.subject=mailto:admin@softday.com
 
+# =======================================
+# Logging Configuration
+# =======================================
 logging.level.root=INFO
 logging.level.com.example.backend=DEBUG
