--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
 
     <properties>
         <java.version>17</java.version>
+            <java.version>17</java.version>
+            <lombok.version>1.18.32</lombok.version>
     </properties>
+
 
     <repositories>
         <repository>
@@ -131,6 +134,12 @@
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version> <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
@@ -143,6 +152,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
